--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/JBayona/ThinkingInReact/issues"
   },
-  "homepage": "https://github.com/JBayona/ThinkingInReact#readme"
+  "homepage": "https://github.com/JBayona/ThinkingInReact#readme",
+  "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0"
+  }
 }
